components/silverbullet/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: silverbullet
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: silverbullet
    app.kubernetes.io/version: 0.7.7
    helm.sh/chart: silverbullet-0.4.2
  name: silverbullet
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: silverbullet
    app.kubernetes.io/name: silverbullet
  type: ClusterIP
